# package-moPepGen

./: .cicd-env  .dockerignore  .gitignore  .pylintrc  404.html  CHANGELOG.md  Dockerfile  README.md  index.html  main.py  metadata.yaml  mkdocs.yml  objects.inv  setup.cfg  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: build-and-deploy.yaml  deploy.yaml  docker-build-release.yaml  docs.yaml  pull_request.yaml  pypi.yaml  tests.yaml
basics/: index.html
call-alt-translation/: index.html
call-noncoding/: index.html
call-novel-orf/: index.html
call-variant/: index.html
decoy-fasta/: index.html
docs/: README.md  alternative_splicing.tvf  annotation_db_schema.puml  basics.md  call-alt-translation.md  call-noncoding.md  call-novel-orf.md  call-variant.md  circ_rna.bed  circ_rna.tsv  decoy-database.md  decoy-fasta.md  encode-fasta.md  file-format.md  file_format.md  filter-fasta.md  fusion.tvf  generate-index.md  index.md  merge-fasta.md  mop_point_mutation.txt  parse-arriba.md  parse-circexplorer.md  parse-fusion-catcher.md  parse-reditools.md  parse-rmats.md  parse-star-fusion.md  parse-vep.md  point_mutation.tvf  quick-start.md  rmats_explore.ipynb  split-database.md  split-fasta.md  summarize-fasta.md  update-index.md  variant_peptides.fasta  vignette.md
docs/files/: alternative_splicing.gvf  alternative_splicing.tvf  circ_rna.gvf  circ_rna.tsv  fusion.gvf  fusion.tvf  fuzz_test_history.tsv  fuzz_test_history.txt  point_mutation.gvf  point_mutation.tvf  rmats_explore.ipynb
docs/partials/: _args_codon_table.md  _args_reference.md  _caution_on_reference_version.md  _command_usage.md
docs/webapp/: C4.iuml  backend application.puml  components.puml  frontend application.puml  frontend hosting.puml  private-moPepGen.code-workspace  roadmap.puml  systems.puml  web server.puml
encode-fasta/: index.html
file-format/: index.html
files/: fuzz_test_history.tsv  point_mutation.gvf
filter-fasta/: index.html
generate-index/: index.html
merge-fasta/: index.html
moPepGen/: AminoAcidSeqDict.py  CircRNA.py  DNASeqDict.py  GTFRecord.py  SeqFeature.py  TranscriptGTFDict.py  TranscriptVEPDict.py  VEPRecord.py  __init__.py  __main__.py  constant.py  err.py  fake.py  index.py  params.py  version.py
parse-arriba/: index.html
parse-circexplorer/: index.html
parse-fusion-catcher/: index.html
parse-reditools/: index.html
parse-rmats/: index.html
parse-star-fusion/: index.html
parse-vep/: index.html
quick-start/: index.html
split-fasta/: index.html
summarize-fasta/: index.html
test/: __init__.py  call_variant_peptide_brute_force.py  conftest.py  downsample_reference.py  prepare_files_for_transcripts.py  profile.py  test_aa.py  test_cli.py  test_cvg.py  test_dna.py  test_dna_node.py  test_dna_seq_with_coordinates.py  test_gtf.py  test_peptide_variant_graph.py  test_reditools.py  test_seqvar_io.py  test_transcript_graph.py  test_vep.py  validate_call_variant.py  vep_example.txt
update-index/: index.html
vignette/: index.html
(+677 files in other folders)
