[metadata]
# replace with your username:
name = mopepgen
version = 0.0.1
author = Chenghao Zhu, Yiyang Liu
author_email = ChenghaoZhu@mednet.ucla.edu, yiyangliu@mednet.ucla.edu
description = Multi-omic peptide generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uclahs-cds/private-Custom-Proteome-Database
project_urls =
    Bug Tracker = https://github.com/uclahs-cds/private-Custom-Proteome-Database/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

install_requires =
    biopython
    pyteomics

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    moPepGen = moPepGen.cli.__main__:main