[metadata]
# replace with your username:
name = mopepgen
version = attr: moPepGen.__version__
author = Chenghao Zhu, Yiyang Liu
author_email = ChenghaoZhu@mednet.ucla.edu, yiyangliu@mednet.ucla.edu
description = Multi-omic peptide generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uclahs-cds/private-moPepGen
project_urls =
    Bug Tracker = https://github.com/uclahs-cds/private-moPepGen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: OS Independent

[options]
package_dir =
    = .
include_package_data = True
packages = find:
python_requires = >=3.6

install_requires =
    biopython

[options.packages.find]
where = .

[options.package_data]
moPepGen = moPepGen/data/*

[options.entry_points]
console_scripts =
    moPepGen = moPepGen.cli.__main__:main